Fixed small overlapping issue of icons.

--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -66,6 +66,10 @@
     color: white;
 }
 
+.icon {
+    margin: 20px 0px
+}
+
 footer {
     background-color: #333;
     color: #ddd;
